--- a/index.html
+++ b/index.html
@@ -1,1 +1,145 @@
-<!DOCTYPE html><html><head><title>Thrilochan Reddy Portfolio</title></head><body><div id='root'></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Thrilochan Reddy Vemula - Portfolio</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      background-color: #f5f5f5;
+      color: #333;
+    }
+
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+
+    header h1 {
+      margin-bottom: 0.5rem;
+    }
+
+    section {
+      padding: 2rem 10%;
+      background-color: #fff;
+      margin: 1rem 0;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      color: #2c3e50;
+      border-bottom: 2px solid #e67e22;
+      padding-bottom: 0.3rem;
+    }
+
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    li {
+      margin-bottom: 0.5rem;
+    }
+
+    a {
+      color: #e67e22;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+    }
+
+    .contact a {
+      display: block;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Thrilochan Reddy Vemula</h1>
+  <p>Electronics and Computer Engineering Student</p>
+</header>
+
+<section>
+  <h2>About</h2>
+  <p>I'm a passionate engineering student with hands-on experience in machine learning, Android development, and embedded systems. I enjoy building impactful solutions through interdisciplinary technologies.</p>
+</section>
+
+<section>
+  <h2>Skills</h2>
+  <p>Machine Learning, Python, C, C++, Tensorflow, Java, GitHub, Android Studio, Kotlin, Jetpack Compose, Neural Networks, SQL, HTML, CSS</p>
+</section>
+
+<section>
+  <h2>Projects</h2>
+  <ul>
+    <li><strong>CereBro:</strong> Android + ML app for early screening of Autism, Dyslexia, and Dementia.</li>
+    <li><strong><a href="https://github.com/violetm00n/Autism_detection" target="_blank">Autism Detection:</a></strong> Predicting ASD in children using behavioral and genetic data.</li>
+    <li><strong><a href="https://github.com/violetm00n/Tomato_leaf_disease_prediction" target="_blank">Leaf Disease Prediction:</a></strong> Deep learning model for identifying crop diseases.</li>
+    <li><strong><a href="https://github.com/violetm00n/Essay-grading" target="_blank">Essay Grading:</a></strong> AI model to grade essays based on multiple writing quality metrics.</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Internships</h2>
+  <ul>
+    <li>AWS AI-ML Virtual Internship (Jan 2024 – Mar 2024)</li>
+    <li>Google Android Developer Virtual Internship (Jul 2024 – Sep 2024)</li>
+    <li>Microchip Embedded Systems Developer Internship (Apr 2024 – Jun 2024)</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Education</h2>
+  <ul>
+    <li>Electronics and Computer Engineering, Sreenidhi Institute (8.8 CGPA), 2021 – Present</li>
+    <li>Class XI–XII, S.R Junior (95.8%), 2019 – 2021</li>
+    <li>Class X, R.B.V.R.R High School, 2018 – 2019</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Competitions</h2>
+  <ul>
+    <li>Charge – National Hackathon, Hyderabad</li>
+    <li>Hacksavvy – National Hackathon, Hyderabad</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Organizations</h2>
+  <ul>
+    <li>Roboveedha (Robotics Club), Volunteer (Nov 2023 – Dec 2023)</li>
+    <li>Arts and Culture Club, Volunteer (Mar 2023 – Apr 2023)</li>
+  </ul>
+</section>
+
+<section class="contact">
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:echo.thrilochanvemula@gmail.com">echo.thrilochanvemula@gmail.com</a></p>
+  <p>Phone: <a href="tel:+919014620519">+91 9014620519</a></p>
+  <p>GitHub: <a href="https://github.com/violetm00n" target="_blank">github.com/violetm00n</a></p>
+</section>
+
+<footer>
+  <p>© 2025 Thrilochan Reddy Vemula. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
